--- a/src/app/component/boxThreeD.css
+++ b/src/app/component/boxThreeD.css
@@ -54,3 +54,14 @@ body
     transform: rotateY(calc(90deg * var(--i))) translateZ(150px);
 
 }
+
+.top
+{
+    position: absolute;
+    top: 40px;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    background-color: #222;
+    transform: rotateX(90deg) translateZ(200px);
+}
