--- a/src/app/component/boxThreeD.css
+++ b/src/app/component/boxThreeD.css
@@ -65,3 +65,16 @@ body
     background-color: #222;
     transform: rotateX(90deg) translateZ(200px);
 }
+
+.top::before
+{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    background-color: #0f0;
+    transform: translateZ(-450px);
+    filter: blur(30px);
+}
