--- a/src/app/component/boxThreeD.css
+++ b/src/app/component/boxThreeD.css
@@ -77,4 +77,9 @@ body
     background-color: #0f0;
     transform: translateZ(-450px);
     filter: blur(30px);
+    box-shadow: 0 0 120px rgba(0, 255, 0, 0.2),
+    0 0 150px rgba(0, 255, 0, 0.4),
+    0 0 250px rgba(0, 255, 0, 0.6),
+    0 0 450px rgba(0, 255, 0, 0.8),
+    0 0 650px rgba(0, 255, 0, 1);
 }
